--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
+    "dompurify": "^3.2.6",
     "formik": "^2.4.6",
+    "he": "^1.2.0",
+    "html-react-parser": "^5.2.5",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -34,7 +37,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "sass": "^1.89.0",
+    "sass": "^1.89.2",
     "vite": "^6.3.5"
   }
 }
