--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.6.0",
